--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-azure-notificationhubs"
         version="1.0.0">
 
@@ -8,33 +9,108 @@
   <engines>
     <engine name="cordova" version=">=6.2.0"/>
   </engines>
-  <license>Apache</license>
+
+  <license>MIT</license>
+
   <description>
-  Send push notifications to any platform, from any backend. Use Notification Hubs to:
-- Reach all major platforms including iOS, Android, Windows
-- Use with any backend, .NET, Java, PHP, or Python, cloud or on-premises
-- Broadcast push notifications to millions of users at once or tailor notifications to individual users
-- Tailor notifications by audience, language, location, and other personal preferences
-- Scale instantly to millions of devices
-- Target content to dynamic user segments
-- Achieve extreme scale
+    Send push notifications to any platform, from any backend. Use Notification Hubs to:
+    - Reach all major platforms including iOS, Android, Windows
+    - Use with any backend, .NET, Java, PHP, or Python, cloud or on-premises
+    - Broadcast push notifications to millions of users at once or tailor notifications to individual users
+    - Tailor notifications by audience, language, location, and other personal preferences
+    - Scale instantly to millions of devices
+    - Target content to dynamic user segments
+    - Achieve extreme scale
   </description>
-  
+
   <keywords>cordova, azure, push notifications, event hub</keywords>
-	
+
   <asset src="www/contract.js" target="js/contract.js"/>
 
   <js-module src="www/contract.js" name="azureNotificationHubs">
     <clobbers target="azureNotificationHubs" />
   </js-module>
 
+  <js-module src="www/Promise.js" name="Promise"/>
+
+  <engines>
+    <engine name="cordova" version=">=3.6.3" />
+    <engine name="cordova-android" version=">=4.0.0" />
+    <engine name="cordova-ios" version=">=4.0.0" />
+  </engines>
+
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="Hello">
-        <param name="android-package" value="org.apache.cordova.example.Hello"/>
+      <feature name="NotificationHubs" >
+        <param name="android-package" value="be.team4talent.notificationhubs.NotificationHubs"/>
       </feature>
     </config-file>
-    <source-file src="src/android/Hello.java" target-dir="src/org/apache/cordova/example"/>
+
+    <config-file target="res/values/strings.xml" parent="/resources">
+      <string name="google_app_id">$SENDER_ID</string>
+    </config-file>
+
+    <config-file target="AndroidManifest.xml" parent="/manifest">
+      <uses-permission android:name="android.permission.INTERNET" />
+      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+      <uses-permission android:name="android.permission.WAKE_LOCK" />
+      <uses-permission android:name="android.permission.VIBRATE"/>
+      <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+      <permission android:name="${applicationId}.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+      <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
+    </config-file>
+
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+      <activity android:name="be.team4talent.notificationhubs.NotificationActivity" android:exported="true"/>
+      <!--<receiver android:name="com.adobe.phonegap.push.BackgroundActionButtonHandler"/>-->
+
+      <receiver
+          android:name="com.google.android.gms.gcm.GcmReceiver"
+          android:exported="true"
+          android:permission="com.google.android.c2dm.permission.SEND" >
+        <intent-filter>
+          <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+          <category android:name="${applicationId}" />
+        </intent-filter>
+      </receiver>
+      
+      <service
+          android:name="be.team4talent.notificationhubs.GCMListenerService"
+          android:exported="false" >
+        <intent-filter>
+          <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        </intent-filter>
+      </service>
+      <service
+          android:name="be.team4talent.notificationhubs.TokenRefreshListenerService"
+          android:exported="false">
+        <intent-filter>
+          <action android:name="com.google.android.gms.iid.InstanceID"/>
+        </intent-filter>
+      </service>
+      <service
+          android:name="be.team4talent.notificationhubs.RegistrationIntentService"
+          android:exported="false">
+      </service>
+    </config-file>
+
+    <framework src="push.gradle" custom="true" type="gradleReference" />
+    <framework src="com.android.support:support-v13:23+" />
+    <framework src="com.google.android.gms:play-services-gcm:8.+" />
+    <framework src="me.leolin:ShortcutBadger:1.1.4@aar" />
+    
+    <source-file src="src/android/be/team4talent/GCMListenerService.java" target-dir="src/be/team4talent/notificationhubs" />
+    <source-file src="src/android/be/team4talent/RegistrationIntentService.java" target-dir="src/be/team4talent/notificationhubs" />
+    <source-file src="src/android/be/team4talent/PluginConstants.java" target-dir="src/be/team4talent/notificationhubs" />
+    <source-file src="src/android/be/team4talent/NotificationActivity.java" target-dir="src/be/team4talent/notificationhubs" />
+    <source-file src="src/android/be/team4talent/TokenRefreshListenerService.java" target-dir="src/be/team4talent/notificationhubs" />
+    <source-file src="src/android/be/team4talent/NotificationHubs.java" target-dir="src/be/team4talent/notificationhubs" />
+    <!--<source-file src="src/android/com/adobe/phonegap/push/PermissionUtils.java" target-dir="src/com/adobe/phonegap/push/" />-->
+    <!--<source-file src="src/android/com/adobe/phonegap/push/BackgroundActionButtonHandler.java" target-dir="src/com/adobe/phonegap/push/" />-->
+    
+    <lib-file src="src/android/lib/azure-notifications-handler-1.0.1.jar" />
+    <lib-file src="src/android/lib/notification-hubs-android-sdk-0.4.jar" />
+    
   </platform>
 
   <platform name="ios">
